Fix navbar overlapping page

--- a/src/App.css
+++ b/src/App.css
@@ -100,12 +100,7 @@ html {
 }
 
 .navbar {
-  text-align: center;
-  position: absolute;
-  top: 0;
   margin-top: 19px;
-  z-index: 0;
-  height: 100vh;
   width: 100vw;
 }
 
